--- a/.github/mention-routes.yml
+++ b/.github/mention-routes.yml
@@ -1,17 +1,13 @@
-{
-  "routes": [
-    {
-      "patterns": ["blackroad/**", "apps/blackroad/**"],
-      "mention": "@blackboxprogramming/blackroad"
-    },
-    {
-      "patterns": ["prism/**", "apps/prism/**"],
-      "mention": "@blackboxprogramming/prism"
-    },
-    {
-      "patterns": ["infra/**", ".github/workflows/**"],
-      "mention": "@blackboxprogramming/platform"
-    }
-  ],
-  "always": []
-}
+# Replace YOUR_ORG with your org slug; replace team slugs/handles as needed.
+routes:
+  - patterns: ["blackroad/**", "apps/blackroad/**", "packages/blackroad/**"]
+    mention: "@YOUR_ORG/blackroad-team"
+  - patterns: ["prism/**", "apps/prism/**", "packages/prism/**"]
+    mention: "@YOUR_ORG/prism-team"
+  - patterns: ["infra/**", ".github/workflows/**"]
+    mention: "@YOUR_ORG/platform-team"
+  - patterns: ["db/migrations/**"]
+    mention: "@YOUR_ORG/data-team"
+  - patterns: ["docs/**"]
+    mention: "@your-username"  # optional: swap with a maintainer
+always: []
