--- a/.github/mention-routes.yml
+++ b/.github/mention-routes.yml
@@ -1,17 +1,15 @@
-{
-  "routes": [
-    {
-      "patterns": ["blackroad/**", "apps/blackroad/**"],
-      "mention": "@blackboxprogramming/blackroad"
-    },
-    {
-      "patterns": ["prism/**", "apps/prism/**"],
-      "mention": "@blackboxprogramming/prism"
-    },
-    {
-      "patterns": ["infra/**", ".github/workflows/**"],
-      "mention": "@blackboxprogramming/platform"
-    }
-  ],
-  "always": []
-}
+routes:
+  - patterns:
+      - "blackroad/**"
+      - "BlackRoad/**"
+      - "apps/blackroad/**"
+    mention: "@blackboxprogramming/blackroad"
+  - patterns:
+      - "prism/**"
+      - "apps/prism/**"
+    mention: "@blackboxprogramming/prism"
+  - patterns:
+      - "infra/**"
+      - ".github/workflows/**"
+    mention: "@blackboxprogramming/platform"
+always: []
