--- a/etc/nginx/sites-enabled/blackroad.conf
+++ b/etc/nginx/sites-enabled/blackroad.conf
@@ -1,39 +1,1 @@
-location ^~ /api/llm/ {
-    proxy_pass http://127.0.0.1:4000/api/llm/;
-    proxy_http_version 1.1;
-    proxy_set_header Connection "";
-    proxy_set_header Host $host;
-    proxy_buffering off;
-    proxy_read_timeout 3600;
-    proxy_send_timeout 3600;
-}
-
-location /api/ {
-    proxy_pass http://127.0.0.1:4000/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-}
-
-location /ws/ {
-    proxy_pass http://127.0.0.1:4000/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-}
-
-location /llm/ {
-    proxy_pass http://127.0.0.1:8000/;
-}
-
-location /math/ {
-    proxy_pass http://127.0.0.1:8500/;
-}
-
-location / {
-    root /var/www/blackroad/;
-    index index.html;
-    try_files $uri /index.html;
-}
+../sites-available/blackroad.conf
