--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,11 @@ requires-python = ">=3.10"
 description = "Offline PLM & Manufacturing Ops (Phase 37) — deterministic, file-backed."
 readme = "README.md"
 authors = [{ name = "Blackroad", email = "eng@blackroadinc.us" }]
-dependencies = ["typer"]
+dependencies = ["typer", "click"]
 
 [project.scripts]
 brc = "cli.console:main"
+blackroad = "cli.blackroad:cli"
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
