--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = ["typer"]
 
 [project.scripts]
 brc = "cli.console:main"
+blackroad = "cli.console:main"
+blackroad-agent = "agent.daemon:main"
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
