--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = ["typer"]
 
 [project.scripts]
 brc = "cli.console:main"
+blackroad-api = "agent.api:main"
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
