--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ profile = "black"
 
 [tool.ruff]
 line-length = 100
+
+[tool.ruff.lint]
 extend-select = ["I"]
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
-extend-select = ["I"]  # import sort
 
