--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,9 @@ services:
       - "4000:4000"
     environment:
       NODE_ENV: production
+      BLACKROAD_DB_PATH: /srv/blackroad-api/data/blackroad.db
     volumes:
-      - blackroad-db:/srv/blackroad-api/blackroad.db
+      - blackroad-db:/srv/blackroad-api/data
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:4000/api/health"]
@@ -31,7 +32,7 @@ services:
         condition: service_healthy
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5173/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5173/"]
       interval: 30s
       timeout: 10s
       retries: 5
