--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.1",
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -41,7 +43,8 @@
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
     "better-sqlite3": "^9.4.3",
-    "stripe": "^12.18.0"
+    "stripe": "^12.18.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
