--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "husky",
     "lint": "eslint . --ext .js,.jsx,.mjs,.cjs || true",
     "format": "prettier -w .",
-    "test": "cross-env NODE_ENV=test jest --runInBand",
+    "test": "jest --runInBand",
     "test:smoke": "node tests/smoke.test.mjs",
     "test-db": "node tests/test_db.js",
     "test-auth": "node tests/test_auth.js",
@@ -48,6 +48,6 @@
     "nodemon": "^3.0.2",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
-    "cross-env": "^7.0.3"
+    "eslint": "^8.57.0"
   }
 }
